# sd_cli_2026

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/workflows/: ci.yml
docs/: Architecture_documentation.md
include/: command_executor.h  command_factory.h  environment_manager.h  input_processor.h  io_redirector.h  lexer.h  parser.h  process_manager.h
include/commands/: abstract_command.h  builtin_command.h  cat_command.h  echo_command.h  exit_command.h  external_command.h  grep_command.h  pipeline_command.h  pwd_command.h  wc_command.h
src/: command_executor.cpp  command_factory.cpp  environment_manager.cpp  input_processor.cpp  io_redirector.cpp  lexer.cpp  main.cpp  parser.cpp  process_manager.cpp
src/commands/: cat_command.cpp  echo_command.cpp  exit_command.cpp  external_command.cpp  grep_command.cpp  pipeline_command.cpp  pwd_command.cpp  wc_command.cpp
test/: main_test.cpp  test_commands.cpp  test_environment.cpp  test_grep.cpp  test_lexer.cpp  test_parser.cpp  test_pipeline.cpp  test_quotes.cpp
